--- a/GitHubMvc/Areas/Search/Views/SearchGitHub/Search.cshtml
+++ b/GitHubMvc/Areas/Search/Views/SearchGitHub/Search.cshtml
@@ -4,14 +4,15 @@
     <div class="card w-50">
         <div class="card-body">
             <h5 class="card-title">Search Github</h5>
-            
+
             @using (Html.BeginForm("Index", "SearchGitHub", FormMethod.Post))
             {
+                @Html.AntiForgeryToken()
                 <div class="form-group row">
-                    @Html.LabelFor(x=>x.Name, new {@class= "col-sm-2 col-form-label" })
+                    @Html.LabelFor(x => x.Name, new { @class = "col-sm-2 col-form-label" })
                     <div class="col-sm-10">
-                        @Html.TextBoxFor(x=>x.Name, new {@class="form-control"})
-                        
+                        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x=>x.Name)
                     </div>
                 </div>
 
