--- a/GitHubMvc/Areas/Search/Views/SearchGitHub/ProjectDetails.cshtml
+++ b/GitHubMvc/Areas/Search/Views/SearchGitHub/ProjectDetails.cshtml
@@ -1,8 +1,22 @@
-﻿@model GitHubMvc.Areas.Search.Controllers.UserProfile
+﻿@model GitHubMvc.Areas.Search.Models.UserProfileViewModel
 
-<h2>ProjectDetails</h2>
+<div id="result-details-pane" class="d-flex flex-row w-100 h-100">
+    <div class="w-25 flex-fill justify-content-start overflow-auto text-white bg-dark-blue">
+    
+        <div class="p-2">
+            <h3>User Overview</h3>
+            <h4>@Model.FullName - @Model.Location</h4>
+            <img src="@Model.AvatarPath"  class="img-fluid"/>
+        </div>
+    </div>
 
-<img src="@Model.AvatarPath" />
-
-<p>Name: @Model.FullName</p>
-<p>Location: @Model.Location</p>
+    <div class="flex-fill w-75 justify-content-start overflow-auto">
+        
+        <div class="d-flex flex-row w-100 bg-dark-blue text-white pb-2">
+            <h3>Project Listings</h3>
+        </div>
+        <div class="p-3">
+            @Html.DisplayFor(x => x.Projects)
+        </div>
+    </div>
+</div>
