fix: resolved issue with client validation not firing and general clean up

--- a/GitHubMvc/Areas/Search/Views/SearchGitHub/Index.cshtml
+++ b/GitHubMvc/Areas/Search/Views/SearchGitHub/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿@model GitHubMvc.Areas.Search.Models.SearchModel
 
-<h2>Index</h2>
-
-
-
 <div class="d-flex flex-row w-100">
     <div class="card w-75">
         <div class="card-body">
@@ -22,7 +18,7 @@
 
 
                 <div class="d-flex flex-row justify-content-end">
-                    <button class="btn btn-primary">Search</button>
+                    <button type="submit" class="btn btn-primary">Search</button>
                 </div>
             }
         </div>
