fix: results page styling issue

--- a/GitHubMvc/Areas/Search/Views/SearchGitHub/ProjectDetails.cshtml
+++ b/GitHubMvc/Areas/Search/Views/SearchGitHub/ProjectDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GitHubMvc.Areas.Search.Models.UserProfileViewModel
 
-<div id="result-details-pane" class="d-flex flex-row w-100 h-100">
+<div id="result-details-pane" class="d-flex flex-row w-100">
     <div class="w-25 flex-fill justify-content-start overflow-auto text-white bg-dark-blue">
     
         <div class="p-2">
